<resources>
    <string name="app_name">ChatNube</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_find">Buscar Amigos</string>
    <string name="action_delete">Eliminar Amigos</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Nombre</string>
    <string name="firstname_hint">Apellido</string>
    <string name="years_hint">Edad</string>
    <string name="password_hint">Contraseña</string>
    <string name="ingresar">Entrar</string>
    <string name="sing_up_text">¡Registrate!</string>
    <string name="title_activity_sing_up_activity">SingUp_activity</string>
    <string name="email">Email</string>
    <string name="sing_up_button_label">Enviar</string>
    <string name="title">Error.</string>
    <string name="empty_field_message">The field %1$s is empty.</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_friends_fragment">FriendsFragment</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_chat_activity2">ChatActivity2</string>
    <string name="action_add_person">add_person</string>
    <string name="title_activity_petitions">PetitionsActivity</string>
    <string name="title_activity_petition_fragment">PetitionFragment</string>
    <string name="title_activity_delete_friends">DeleteFriendsActivity</string>

</resources>
